global jquery update

--- a/SEA.P/Web/Content/html/index.html
+++ b/SEA.P/Web/Content/html/index.html
@@ -39,12 +39,13 @@ Supported file extensions
     </div>
 
     <!-- jQuery -->
-    <script src="/res/jquery-1.12.3.min.js"></script>
-    <script src="/res/jquery-ui-1.11.4.min.js"></script>
+    <script src="/res/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.3.2.js"></script>
+    <script src="/res/jquery-ui.min.js"></script>
     <script src="/res/jquery.plugins.js"></script>
     <script src="/res/jquery-ui.plugins.js"></script>
     <!-- SignalR -->
-    <script src="/res/jquery.signalR-2.2.0.min.js"></script>
+    <script src="/res/jquery.signalR-2.4.2.min.js"></script>
     <script src="/signalr/hubs"></script>
     <!-- SEA Core-->
     <script src="/res/sea-core.js"></script>
