desktop button support

--- a/SEA.P/Web/Content/html/index.html
+++ b/SEA.P/Web/Content/html/index.html
@@ -29,19 +29,19 @@ Supported file extensions
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>S.E.A. Dashboard</title>
     <link rel="stylesheet" href="/res/global.css">
-    <link rel="stylesheet" href="/res/sea-ui.css">
+    <link rel="stylesheet" href="/res/sea-ui-new.css">
 </head>
 <body>
     <div id="sea_ui">
         <div id="sea_main_menu"></div>
         <div id="sea_dashboard"></div>
-        <div class="signature sea-text">OniVe</div>
+        <div class="signature sea-text">Twertoon</div>
     </div>
 
     <!-- jQuery -->
     <script src="/res/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.3.2.js"></script>
-    <script src="/res/jquery-ui.min.js"></script>
+    <!--script src="https://code.jquery.com/jquery-migrate-3.3.2.js"></script-->
+    <script src="/res/jquery-ui.js"></script>
     <script src="/res/jquery.plugins.js"></script>
     <script src="/res/jquery-ui.plugins.js"></script>
     <!-- SignalR -->
@@ -50,9 +50,10 @@ Supported file extensions
     <!-- SEA Core-->
     <script src="/res/sea-core.js"></script>
     <!-- Controls -->
-    <script src="/res/sea-controls.js"></script>
+    <script src="/res/sea-controls-new.js"></script>
     <script src="/res/sea-indicators.js"></script>
     <!-- SEA UI -->
     <script src="/res/sea-ui.js"></script>
+    <!-- TESTING -->
 </body>
 </html>
