--- a/SEA.P/Web/Content/html/index.html
+++ b/SEA.P/Web/Content/html/index.html
@@ -30,22 +30,26 @@ Supported file extensions
     <title>S.E.A. Dashboard</title>
     <link rel="stylesheet" href="/res/global.css">
     <link rel="stylesheet" href="/res/sea-ui-new.css">
+    <link rel="stylesheet" href="/res/jquery-ui.css">
 </head>
+
 <body>
     <div id="sea_ui">
         <div id="sea_main_menu"></div>
         <div id="sea_dashboard"></div>
-        <div class="signature sea-text">Twertoon</div>
+        <!--<div id="polzunok"></div>-->
+        <div class="signature sea-text">Twertoon</div>        
     </div>
 
     <!-- jQuery -->
-    <script src="/res/jquery-3.6.0.min.js"></script>
+    <script src="/res/jquery-3.6.0.js"></script>
     <!--script src="https://code.jquery.com/jquery-migrate-3.3.2.js"></script-->
     <script src="/res/jquery-ui.js"></script>
+    <script src="/res/jquery.ui.touch-punch.js"></script>
     <script src="/res/jquery.plugins.js"></script>
     <script src="/res/jquery-ui.plugins.js"></script>
     <!-- SignalR -->
-    <script src="/res/jquery.signalR-2.4.2.min.js"></script>
+    <script src="/res/jquery.signalR-2.4.2.js"></script>
     <script src="/signalr/hubs"></script>
     <!-- SEA Core-->
     <script src="/res/sea-core.js"></script>
@@ -55,5 +59,18 @@ Supported file extensions
     <!-- SEA UI -->
     <script src="/res/sea-ui.js"></script>
     <!-- TESTING -->
+    <script src="/res/test-ui.js"></script>
+    <!--<script>
+    var elem = document.getElementById('elem');
+    document.addEventListener('pointerdown', function(event) {
+        console.log('Pointer down');
+    document.addEventListener('pointermove', function(event) {
+          console.log('Pointer moved');
+          elem.innerHTML = event.pageX + ' : ' + event.pageY;
+    })});
+    </script>-->
+    <script>
+
+    </script>
 </body>
 </html>
